# threadbare

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DESIGN.md  DEVELOPMENT.md  Dockerfile  README.md  RESOLVED_ISSUES.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
deploy/cdk/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json  upgrade.sh
deploy/cdk/lib/: database-stack.ts  migrate-stack.ts  network-stack.ts  sync-worker-stack.ts  web-stack.ts
docker/: init-test-db.sql
docs/: self-hosting.md
scripts/: install.sh  render_preview.py  upgrade.sh
src/threadbare/: __init__.py  channel_types.py  channel_visibility.py  config.py  discord_permissions.py  logging_config.py  pagination.py  pseudotopics.py  urls.py
src/threadbare/db/: admin_queries.py  migrate.py  pool.py  queries.py  wizard_queries.py
src/threadbare/rendering/: attachments.py  avatars.py  embeds.py  emoji.py  markdown.py  quotes.py  reactions.py  relative_time.py  render_service.py  resolve.py  system_messages.py  user_display.py
src/threadbare/sync_worker/: backfill.py  bot.py  channel_overwrites.py  checkpoints.py  cli.py  discord_types.py  discovery.py  events.py  heartbeat.py  permissions.py  reconciliation.py  repository.py  transform.py
src/threadbare/web/: app.py  app_switcher.py  authz.py  board_tree.py  breadcrumbs.py  cli.py  db.py  discord_rest.py  preferences.py  themes.py  wizard_app.py
src/threadbare/wizard/: env_file.py  invite.py  preflight.py  steps.py
tests/e2e/: conftest.py  test_admin_and_login_gate.py  test_forum_smoke.py  test_placeholder.py  test_subpath_deployment.py  test_web_process_restart.py  test_wizard_first_run.py  test_wizard_resume.py
tests/integration/: conftest.py
tests/integration/db/: test_migrate.py  test_pool.py  test_queries.py  test_wizard_queries.py  test_wizard_state_schema.py
tests/integration/rendering/: test_quotes.py  test_render_service.py  (+1 more)
tests/live_discord/: conftest.py  test_backfill_general.py  test_bot_connects.py  test_channel_permissions.py  test_discovery_and_backfill.py  test_forum_channel.py  test_full_lifecycle.py  test_thread_backfill.py
tests/unit/: test_channel_types.py  test_channel_visibility.py  test_config.py  test_discord_permissions.py  test_logging_config.py  test_pagination.py  test_placeholder.py  test_pseudotopics.py  test_urls.py  test_version.py
(+128 files in other folders)
