[project]
name = "threadbare"
version = "0.1.0"
description = "A read-only, phpBB-style web interface for browsing the history of a Discord server."
readme = "README.md"
authors = [
    { name = "Charlie", email = "cmdouglas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "python-dotenv>=1.0",
    "discord-markdown-ast-parser>=1.0.6",
    "nh3>=0.3.6",
]

[project.scripts]
threadbare-migrate = "threadbare.db.migrate:main"
threadbare-sync-worker = "threadbare.sync_worker.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pytest-playwright>=0.5",
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
# tests/e2e (Playwright) is deliberately excluded from the default testpaths:
# pytest-playwright's sync driver and pytest-asyncio's runner corrupt each
# other's event-loop state when collected into the same session (a real
# upstream friction point, not a project bug) — run it separately via
# `uv run pytest tests/e2e`, as DEVELOPMENT.md documents.
testpaths = ["tests/unit", "tests/integration", "tests/live_discord"]
asyncio_mode = "auto"
markers = [
    "live_discord: requires a real Discord bot token + test guild (opt-in, see DEVELOPMENT.md)",
]
addopts = "-m 'not live_discord'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
